--- a/ArnaldoBarriosAppFrontEnd/src/app/Persona/listar/listar.component.html
+++ b/ArnaldoBarriosAppFrontEnd/src/app/Persona/listar/listar.component.html
@@ -16,8 +16,8 @@
                 <tbody>
                     <tr *ngFor="let persona of personas" class="text-center">
                         <td>{{persona.idPersona}}</td>
-                        <td>{{persona.nombre}}</td>
-                        <td>{{persona.apellido}}</td>
+                        <td>{{persona.nombres}}</td>
+                        <td>{{persona.apellidos}}</td>
                         <td>
                             <button (click)="editar(persona)" class="btn btn-warning">Editar</button>
                             <button (click)="eliminar(persona)" class="btn btn-danger" style="margin-left: 10px;">Eliminar</button>
